--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ body {
 			if("mediaDevices" in navigator && "getUserMedia" in navigator.mediaDevices) {
                 if("serviceWorker" in navigator) {
                 	window.onload = _ => {
-                		navigator.serviceWorker.register("recharger_sw.js").then(res => {
+                		navigator.serviceWorker.register("recharge_sw.js").then(res => {
                 			pageComplete();
                	 	}).catch(error => {
                		 	pageComplete();
