--- a/index.html
+++ b/index.html
@@ -16,8 +16,82 @@
 body {
     margin: 0;
     padding: 0;
-    background: linear-gradient(to bottom, #000000, #373737);
+    background: #0099B1;
 }
+
+.load {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    background: #fff;
+    padding: 20px;
+    
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+} 
+
+.spinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    border: 2px solid #0099B100;
+    border-left-color: #0099B1;
+    border-right-color: #0099B1;
+    animation: spin 1s linear 0s infinite;
+} 
+
+@keyframes spin {
+    0% {transform: translate3d(-50%, -50%, 0) rotate(0deg);}
+    100% {transform: translate3d(-50%, -50%, 0) rotate(360deg);}
+} 
+
+.load .load_footer {
+    height: fit-content;
+    width: fit-content;
+    display: grid;
+    grid-template-columns: 45px auto;
+    grid-template-rows: auto auto;
+    grid-column-gap: 10px;
+    justify-content: start;
+    align-content: center;
+} 
+
+.load_icon {
+    grid-area: 1 / 1 / span 2 / 2;
+    height: 45px;
+    width: 100%;
+    background: url("recharge icon (512x512).png");
+    background-size: 100% 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+} 
+
+.load_footer > h2, .load_footer > h3 {
+    color: #0099B1;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+} 
+
+.load_footer h2 {
+    font-weight: 500;
+    font-size: 2rem;
+} 
+
+.load_footer h3 {
+    font-size: 0.8rem;
+    font-weight: 400;
+    padding-left: 2px;
+} 
         </style>
     </head>
     <body>
@@ -33,6 +107,14 @@ body {
                 <button onclick="InstallApp()">INSTALL</button>
             </div>
         </div>
+        <article class="load"> 
+            <div class="load_footer">
+                <div class="load_icon"></div>
+                <h2>Smart Recharge</h2>
+                <h3>Version info: V1.0</h3>
+            </div>
+            <div class="spinner"></div>
+        </article>
         <article class="window main" hidden>
             <div class="header">
                 <h1>SMART RECHARGE</h1>
