--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>SMART RECHARGE</title>
         <style>
 * {
-    font-family: Arial;
+    font-family: Arial, Serif;
     box-sizing: border-box;
     overflow: hidden;
 } 
