--- a/index.html
+++ b/index.html
@@ -267,7 +267,10 @@ body {
                 JsLink0.src = "recharge.js";
                 JsLink1.onload = () => {
                     tesseractLoaded = true
+                    if(Stream) 
                     Stream.initTesseract();
+                    else
+                    setTimeout(Stream.initTesseract, 2000);
                 };
                 JsLink1.src = "https://unpkg.com/tesseract.js@v2.1.0/dist/tesseract.min.js";
 
