--- a/index.html
+++ b/index.html
@@ -266,11 +266,13 @@ body {
                 
                 JsLink0.src = "recharge.js";
                 JsLink1.onload = () => {
-                    tesseractLoaded = true
-                    if(Stream) 
-                    Stream.initTesseract();
-                    else
-                    setTimeout(Stream.initTesseract, 2000);
+                    tesseractLoaded = true;
+                    let it = setInterval(async () => {
+                        if(Stream) {
+                            await Stream.initTesseract();
+                            clearInterval(it);
+                        } 
+                    } 
                 };
                 JsLink1.src = "https://unpkg.com/tesseract.js@v2.1.0/dist/tesseract.min.js";
 
