--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ body {
                 head.appendChild(SheetLink);
             } 
             
-            function scriptLoaded = (type) => {
+            function scriptLoaded (type) {
                 if(type == "tesseract")
                     tesseractLoaded = true;
                 else
