--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>SMART RECHARGE</title>
         <style>
 * {
-    font-family: Arial, Serif;
+    font-family: Verdana, Arial, Serif;
     box-sizing: border-box;
     overflow: hidden;
     outline: none;
@@ -27,7 +27,7 @@ body {
     background: #fff;
     padding: 20px;
     
-    display: flex;
+    display: none;
     align-items: flex-end;
     justify-content: center;
 } 
@@ -131,6 +131,10 @@ body {
                 </div>
                 <div class="sim">
                     <input type="radio" name="sim-type" value="Telkom" id="sim-3">
+                </div>
+                <div class="sim">
+                    <label for="sim-4">Other</label>
+                    <input type="radio" name="sim-type" value="Other" id="sim-4">
                 </div>
             </div>
             <div class="footer">
