--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body {
     background: #fff;
     padding: 20px;
     
-    display: none;
+    display: flex;
     align-items: flex-end;
     justify-content: center;
 } 
