--- a/index.html
+++ b/index.html
@@ -364,6 +364,7 @@ body {
            } 
            else {
                alert("This app is not compatible with your current browser. Try another browser preferably chrome.");
+               window.close();
            } 
         </script>
     </body>
