--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="manifest" href="./manifest.webmanifest">
         <title>SMART RECHARGE</title>
         <style>
-* {
+*, *:before, *:after {
     font-family: Verdana, Arial, Serif;
     box-sizing: border-box;
     overflow: hidden;
@@ -108,7 +108,7 @@ body {
             <div class="head">
                 <div class="icon"></div>
                 <h2>Smart Recharge</h2>
-                <h3>Version info: V1.2</h3>
+                <h3>Version info: V1.3</h3>
                 <p>Install Smart Recharge in your phone</p>
             </div>
             <div class="foot">
@@ -120,7 +120,7 @@ body {
             <div class="load_footer">
                 <div class="load_icon"></div>
                 <h2>Smart Recharge</h2>
-                <h3>Version info: V1.2</h3>
+                <h3>Version info: V1.3</h3>
             </div>
             <div class="spinner"></div>
         </article>
@@ -154,7 +154,7 @@ body {
             <div class="head">
                 <div class="icon"></div>
                 <h2>Smart Recharge</h2>
-                <h3>Version info: V1.2</h3>
+                <h3>Version info: V1.3</h3>
             </div>
             <div class="options">
                 <button>Share</button>
@@ -321,12 +321,12 @@ body {
                 
                 SheetLink.type = "text/css";
                 SheetLink.rel = "stylesheet";
-                SheetLink.href = "index.css?v=1.2";
+                SheetLink.href = "index.css?v=1.3";
                 
                 JsLink0.onload = () => {
                     scriptLoaded("recharge");
                 };
-                JsLink0.src = "index.js?v=1.2";
+                JsLink0.src = "index.js?v=1.3";
                 JsLink1.onload = () => {
                     scriptLoaded("tesseract");
                 };
