--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@ body {
             <div class="hidden_footer">
                 <div class="input">
                     <label class='border'></label>
+                    <span class="width_generator" aria-hidden="true"></span>
                     <input type="text" value="1234 5678 9012" disabled>
                     <label class='border'></label>
                 </div>
