--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ body {
             <div class="head">
                 <div class="icon"></div>
                 <h2>Smart Recharge</h2>
-                <h3>Version info: V1.3</h3>
+                <h3>Version info: V1.4</h3>
                 <p>Install Smart Recharge in your phone</p>
             </div>
             <div class="foot">
@@ -120,7 +120,7 @@ body {
             <div class="load_footer">
                 <div class="load_icon"></div>
                 <h2>Smart Recharge</h2>
-                <h3>Version info: V1.3</h3>
+                <h3>Version info: V1.4</h3>
             </div>
             <div class="spinner"></div>
         </article>
@@ -154,7 +154,7 @@ body {
             <div class="head">
                 <div class="icon"></div>
                 <h2>Smart Recharge</h2>
-                <h3>Version info: V1.3</h3>
+                <h3>Version info: V1.4</h3>
             </div>
             <div class="options">
                 <button>Share</button>
@@ -214,7 +214,7 @@ body {
             <div class="hidden_footer">
                 <div class="input">
                     <label class='border'></label>
-                    <span class="width_generator" aria-hidden="true"></span>
+                    <span class="width_generator" aria-hidden="true">1234 5678 9012</span>
                     <input type="text" value="1234 5678 9012" disabled>
                     <label class='border'></label>
                 </div>
@@ -322,12 +322,12 @@ body {
                 
                 SheetLink.type = "text/css";
                 SheetLink.rel = "stylesheet";
-                SheetLink.href = "index.css?v=1.3";
+                SheetLink.href = "index.css?v=1.4";
                 
                 JsLink0.onload = () => {
                     scriptLoaded("recharge");
                 };
-                JsLink0.src = "index.js?v=1.3";
+                JsLink0.src = "index.js?v=1.4";
                 JsLink1.onload = () => {
                     scriptLoaded("tesseract");
                 };
