--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ body {
             <div class="head">
                 <div class="icon"></div>
                 <h2>Smart Recharge</h2>
-                <h3>Version info: V2.4</h3>
+                <h3>Version info: V2.5</h3>
                 <p>Install Smart Recharge in your phone</p>
             </div>
             <div class="foot">
@@ -116,11 +116,12 @@ body {
                 <button onclick="InstallApp()">INSTALL</button>
             </div>
         </div>
+        <section onanimationend="End(event)" id="pop-up-note" hidden></section>
         <article class="load" hidden> 
             <div class="load_footer">
                 <div class="load_icon"></div>
                 <h2>Smart Recharge</h2>
-                <h3>Version info: V2.4</h3>
+                <h3>Version info: V2.5</h3>
             </div>
             <div class="spinner"></div>
         </article>
@@ -154,7 +155,7 @@ body {
             <div class="head">
                 <div class="icon"></div>
                 <h2>Smart Recharge</h2>
-                <h3>Version info: V2.4</h3>
+                <h3>Version info: V2.5</h3>
             </div>
             <div class="options">
                 <button>Share</button>
@@ -322,12 +323,12 @@ body {
                 
                 SheetLink.type = "text/css";
                 SheetLink.rel = "stylesheet";
-                SheetLink.href = "index.css?v=2.4";
+                SheetLink.href = "index.css?v=2.5";
                 
                 JsLink0.onload = () => {
                     scriptLoaded("recharge");
                 };
-                JsLink0.src = "index.js?v=2.4";
+                JsLink0.src = "index.js?v=2.5";
                 JsLink1.onload = () => {
                     scriptLoaded("tesseract");
                 };
