--- a/index.html
+++ b/index.html
@@ -323,12 +323,12 @@ body {
                 
                 SheetLink.type = "text/css";
                 SheetLink.rel = "stylesheet";
-                SheetLink.href = "index.css?v=2.6";
+                SheetLink.href = "index.css?v=" + Date.now();
                 
                 JsLink0.onload = () => {
                     scriptLoaded("recharge");
                 };
-                JsLink0.src = "index.js?v=2.6";
+                JsLink0.src = "index.js?v=" + Date.now();
                 JsLink1.onload = () => {
                     scriptLoaded("tesseract");
                 };
