--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@ body {
                 <h3>Version info: V2.7</h3>
             </div>
             <div class="options">
+            	<button>Dark Theme</button>
+            	<hr>
                 <button>Share</button>
                 <hr>
                 <button>Feedback</button>
