--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ body {
                 //JsLink1.src = "https://unpkg.com/tesseract.js@v2.1.0/dist/tesseract.min.js";
 
                 head.appendChild(JsLink0);
-                head.appendChild(JsLink1);
+                //head.appendChild(JsLink1);
                 head.appendChild(SheetLink);
             } 
             
