--- a/index.html
+++ b/index.html
@@ -343,6 +343,7 @@ body {
             } 
             
             function scriptLoaded (type) {
+            	alert(type);
                 if(type == "tesseract")
                     tesseractLoaded = true;
                 else
