--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ body {
                     scriptLoaded("tesseract");
                 };
                 //JsLink1.src = "https://unpkg.com/tesseract.js@v2.1.0/dist/tesseract.min.js";
-
+				alert("Done");
                 head.appendChild(JsLink0);
                 //head.appendChild(JsLink1);
                 head.appendChild(SheetLink);
