--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ body {
                 <h3>Version info: V2.7.11</h3>
             </div>
             <div class="options">
-            	<button>Dark Theme</button>
+            	<button>Dark Theme<span></span></button>
             	<hr>
                 <button>Share</button>
                 <hr>
