--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ body {
             <div class="head">
                 <div class="icon"></div>
                 <h2>Smart Recharge</h2>
-                <h3>Version info: V2.7.14</h3>
+                <h3>Version info: V2.7.15</h3>
                 <p>Install Smart Recharge in your phone</p>
             </div>
             <div class="foot">
@@ -121,7 +121,7 @@ body {
             <div class="load_footer">
                 <div class="load_icon"></div>
                 <h2>Smart Recharge</h2>
-                <h3>Version info: V2.7.14</h3>
+                <h3>Version info: V2.7.15</h3>
             </div>
             <div class="spinner"></div>
         </article>
@@ -155,10 +155,10 @@ body {
             <div class="head">
                 <div class="icon"></div>
                 <h2>Smart Recharge</h2>
-                <h3>Version info: V2.7.14</h3>
+                <h3>Version info: V2.7.15</h3>
             </div>
             <div class="options">
-            	<button>Dark Theme<span><span></span></span></button>
+            	<button>Dark Theme<span class='toggle'><span class='switch'></span></span></button>
             	<hr>
                 <button>Share</button>
                 <hr>
