--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ body {
                 <h3>Version info: V2.7.21</h3>
             </div>
             <div class="options">
-            	<button>Dark Theme<span class='toggle'></span></button>
+            	<button>Dark Theme<span class='toggle'></span><span class="switch"></span></button>
             	<hr>
                 <button>Share</button>
                 <hr>
