--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ body {
             } 
             var scriptVersion = Date.now();
             var deferredEvent;
-            var tesseractLoaded = true;
+            var tesseractLoaded = false;
             var rechargeLoaded = false;
             
             function pageComplete () {
