--- a/index.html
+++ b/index.html
@@ -315,6 +315,13 @@ body {
             var rechargeLoaded = false;
             
             function pageComplete () {
+            	if(storage && storage.getItem("theme")) {
+            		let theme = storage.getItem("theme");
+            		if(JSON.parse(theme)) {
+            			$(".load").classList.toggle("dark_theme");
+            			$(".options button:first-of-type").click();
+            		} 
+            	} 
                 window.addEventListener("beforeinstallprompt", e => {
                     e.preventDefault();
                     deferredEvent = e;
