--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ body {
             <div class="head">
                 <div class="icon"></div>
                 <h2>Smart Recharge</h2>
-                <h3>Version info: V2.7.42</h3>
+                <h3>Version info: V2.7.43</h3>
                 <p>Install Smart Recharge in your phone</p>
             </div>
             <div class="foot">
@@ -121,7 +121,7 @@ body {
             <div class="load_footer">
                 <div class="load_icon"></div>
                 <h2>Smart Recharge</h2>
-                <h3>Version info: V2.7.42</h3>
+                <h3>Version info: V2.7.43</h3>
             </div>
             <div class="spinner"></div>
         </article>
@@ -155,7 +155,7 @@ body {
             <div class="head">
                 <div class="icon"></div>
                 <h2>Smart Recharge</h2>
-                <h3>Version info: V2.7.42</h3>
+                <h3>Version info: V2.7.43</h3>
             </div>
             <div class="options">
             	<button>Dark Theme<span class='toggle'></span><span class="switch"></span></button>
@@ -342,9 +342,9 @@ body {
                 JsLink1.onload = () => {
                     scriptLoaded("tesseract");
                 };
-                //JsLink1.src = "https://unpkg.com/tesseract.js@v2.1.0/dist/tesseract.min.js";
+                JsLink1.src = "https://unpkg.com/tesseract.js@v2.1.0/dist/tesseract.min.js";
                 head.appendChild(JsLink0);
-                //head.appendChild(JsLink1);
+                head.appendChild(JsLink1);
                 head.appendChild(SheetLink);
             } 
             
