--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ body {
             <div class="head">
                 <div class="icon"></div>
                 <h2>Smart Recharge</h2>
-                <h3>Version info: V2.7.44</h3>
+                <h3>Version info: V2.7.45</h3>
                 <p>Install Smart Recharge in your phone</p>
             </div>
             <div class="foot">
@@ -121,7 +121,7 @@ body {
             <div class="load_footer">
                 <div class="load_icon"></div>
                 <h2>Smart Recharge</h2>
-                <h3>Version info: V2.7.44</h3>
+                <h3>Version info: V2.7.45</h3>
             </div>
             <div class="spinner"></div>
         </article>
@@ -155,7 +155,7 @@ body {
             <div class="head">
                 <div class="icon"></div>
                 <h2>Smart Recharge</h2>
-                <h3>Version info: V2.7.44</h3>
+                <h3>Version info: V2.7.45</h3>
             </div>
             <div class="options">
             	<button>Dark Theme<span class='toggle'></span><span class="switch"></span></button>
@@ -315,10 +315,10 @@ body {
             var rechargeLoaded = false;
             
             function pageComplete () {
-            	if(window.storage && window.storage.getItem("theme")) {
+            	if(window.storage) {
             		let theme = window.storage.getItem("theme");
             		alert(theme);
-            		if(JSON.parse(theme)) {
+            		if(theme && JSON.parse(theme)) {
             			$(".load").classList.toggle("dark_theme");
             			$(".options button:first-of-type").click();
             		} 
