--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@ body {
     padding-left: 2px;
 } 
         </style>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5128637267397017"
+		     crossorigin="anonymous">
+		</script>
     </head>
     <body>
         <div class="install_prompt" hidden>
