--- a/index.html
+++ b/index.html
@@ -101,6 +101,15 @@ body {
     font-weight: 400;
     padding-left: 2px;
 } 
+
+.dark_theme.load {
+	background: #003238 !important;
+} 
+
+.dark_theme.load h2, 
+.dark_theme.load h3 {
+	color: #fff !important;
+} 
         </style>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5128637267397017"
 		     crossorigin="anonymous">
