--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     box-sizing: border-box;
     overflow: hidden;
     outline: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
 } 
 
 html {
@@ -120,7 +123,7 @@ body {
             <div class="head">
                 <div class="icon"></div>
                 <h2>Smart Recharge</h2>
-                <h3>Version info: V2.8.2</h3>
+                <h3>Version info: V2.8.3</h3>
                 <p>Install Smart Recharge in your phone</p>
             </div>
             <div class="foot">
@@ -133,7 +136,7 @@ body {
             <div class="load_footer">
                 <div class="load_icon"></div>
                 <h2>Smart Recharge</h2>
-                <h3>Version info: V2.8.2</h3>
+                <h3>Version info: V2.8.3</h3>
             </div>
             <div class="spinner"></div>
         </article>
@@ -167,7 +170,7 @@ body {
             <div class="head">
                 <div class="icon"></div>
                 <h2>Smart Recharge</h2>
-                <h3>Version info: V2.8.2</h3>
+                <h3>Version info: V2.8.3</h3>
             </div>
             <div class="options">
             	<button>Dark Theme<span class='toggle'></span><span class="switch"></span></button>
@@ -375,13 +378,17 @@ body {
 			
 			if("mediaDevices" in navigator && "getUserMedia" in navigator.mediaDevices) {
                 if("serviceWorker" in navigator) {
-                	window.onload = _ => {
-                		navigator.serviceWorker.register("sw.js" + scriptVersion).then(res => {
+                	let reg = await navigator.serviceWorker.getRegistration();
+                	if(reg) {
+                		 pageComplete();
+                	} 
+                	else {
+                		navigator.serviceWorker.register("sw.js").then(res => {
                 			pageComplete();
                	 	}).catch(error => {
                		 	pageComplete();
               		  });
-               	 } 
+                	} 
                 } 
                 else {
                 	alert("Can't Register an cache of this app because your browser don't support this capability. However you can still access it only while online. If you however really need the offline version, try: \n\n1. Update your browser. or\n2. Another browser, preferably chrome.");
