--- a/index.html
+++ b/index.html
@@ -378,17 +378,18 @@ body {
 			
 			if("mediaDevices" in navigator && "getUserMedia" in navigator.mediaDevices) {
                 if("serviceWorker" in navigator) {
-                	let reg = await navigator.serviceWorker.getRegistration();
-                	if(reg) {
-                		 pageComplete();
-                	} 
-                	else {
-                		navigator.serviceWorker.register("sw.js").then(res => {
-                			pageComplete();
-               	 	}).catch(error => {
-               		 	pageComplete();
-              		  });
-                	} 
+                	navigator.serviceWorker.getRegistration().then(reg => {;
+	                	if(reg) {
+	                		 pageComplete();
+	                	} 
+	                	else {
+	                		navigator.serviceWorker.register("sw.js").then(res => {
+	                			pageComplete();
+	               	 	}).catch(error => {
+	               		 	pageComplete();
+	              		  });
+	                	} 
+					});
                 } 
                 else {
                 	alert("Can't Register an cache of this app because your browser don't support this capability. However you can still access it only while online. If you however really need the offline version, try: \n\n1. Update your browser. or\n2. Another browser, preferably chrome.");
