--- a/index.html
+++ b/index.html
@@ -378,9 +378,22 @@ body {
 			
 			if("mediaDevices" in navigator && "getUserMedia" in navigator.mediaDevices) {
                 if("serviceWorker" in navigator) {
+                	navigator.serviceWorker.onmessage = function(e) {
+						if(e.data && e.data.type == "version") {
+							if(e.data.version < 283) {
+								navigator.serviceWorker.register("sw.js").then(res => {
+		                			pageComplete();
+		               	 	}).catch(error => {
+		               		 	pageComplete();
+		              		  });
+							} 
+						} 
+					} 
                 	navigator.serviceWorker.getRegistration().then(reg => {;
 	                	if(reg) {
-	                		 pageComplete();
+							navigator.serviceWorker.controller.postMessage({
+								type: "get-version"
+							});
 	                	} 
 	                	else {
 	                		navigator.serviceWorker.register("sw.js").then(res => {
