--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ body {
             			$(".load").classList.toggle("dark_theme");
             		} 
             	} 
-                window.addEventListener("beforeinstallprompt", e => {
+                window.addEventListener("beforeinstallprompt", (e) => {
                     e.preventDefault();
                     deferredEvent = e;
                 });
