--- a/index.html
+++ b/index.html
@@ -389,6 +389,9 @@ body {
 		               		 	pageComplete();
 		              		  });
 							} 
+							else {
+								pageComplete();
+							} 
 						} 
 					} 
                 	navigator.serviceWorker.getRegistration().then(reg => {;
