--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@ body {
             	} 
                 window.addEventListener("beforeinstallprompt", (e) => {
                     e.preventDefault();
+                    alert(deferredEvent);
                     if(deferredEvent == "passed") {
                     	setTimeout(() => {
 				            $(".install_prompt").style.display = "block";
@@ -388,7 +389,6 @@ body {
                 if("serviceWorker" in navigator) {
                 	navigator.serviceWorker.onmessage = function(e) {
 						if(e.data && e.data.type == "version") {
-							alert(e.data.version);
 							if(e.data.version < 283) {
 								navigator.serviceWorker.register("sw.js").then(res => {
 		                			pageComplete();
