--- a/index.html
+++ b/index.html
@@ -105,6 +105,26 @@ body {
     padding-left: 2px;
 } 
 
+.show_install_prompt {
+    animation: pop-in 0.5s ease-out 0s 1 normal forwards;
+} 
+
+@keyframes pop-in {
+    0% {transform: translate3d(-50%, -50%, 0) scale(0);}
+    80% {transform: translate3d(-50%, -50%, 0) scale(1.2);}
+    100% {transform: translate3d(-50%, -50%, 0) scale(1);}
+} 
+
+.hide_install_prompt {
+    animation: pop-out 0.5s ease-in 0s 1 normal forwards;
+} 
+
+@keyframes pop-out {
+    0% {transform: translate3d(-50%, -50%, 0) scale(1);}
+    20% {transform: translate3d(-50%, -50%, 0) scale(1.2);}
+    100% {transform: translate3d(-50%, -50%, 0) scale(0);}
+} 
+
 .dark_theme.load {
 	background: #003238 !important;
 } 
