--- a/index.html
+++ b/index.html
@@ -378,6 +378,7 @@ body {
                 if(deferredEvent == "passed") {
 		            $(".install_prompt").style.display = "block";
 		            $(".install_prompt").classList.add("show_install_prompt");
+					alert("Showing install prompt.");
 				} 
                 else {
 					deferredEvent = e;
