--- a/index.html
+++ b/index.html
@@ -376,9 +376,13 @@ body {
                 e.preventDefault();
                 alert(deferredEvent);
                 if(deferredEvent == "passed") {
+                	try {
 		            $(".install_prompt").style.display = "block";
 		            $(".install_prompt").classList.toggle("show_install_prompt");
 					alert($(".install_prompt").classList.contains("show_install_prompt"));
+					} catch (error) {
+						reportError(error);
+					} 
 				} 
                 else {
 					deferredEvent = e;
