--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ body {
                 	try {
 			            $(".install_prompt").style.display = "block !important";
 			            //;$(".install_prompt").classList.toggle("show_install_prompt");
-						alert($(".install_prompt").classList.contains("show_install_prompt"));
+						//alert($(".install_prompt").classList.contains("show_install_prompt"));
 					} catch (error) {
 						reportError(error);
 					} 
