--- a/index.html
+++ b/index.html
@@ -377,9 +377,9 @@ body {
                 alert(deferredEvent);
                 if(deferredEvent == "passed") {
                 	try {
-			            $(".install_prompt").style.display = "block !important";
+			            $(".install_prompt").style.display = "block";
 			            //;$(".install_prompt").classList.toggle("show_install_prompt");
-						//alert($(".install_prompt").classList.contains("show_install_prompt"));
+						alert($(".install_prompt").classList.contains("show_install_prompt"));
 					} catch (error) {
 						reportError(error);
 					} 
