--- a/index.html
+++ b/index.html
@@ -377,9 +377,11 @@ body {
                 alert(deferredEvent);
                 if(deferredEvent == "passed") {
                 	try {
-			            $(".install_prompt").style.display = "block";
-			            $(".install_prompt").classList.add("show_install_prompt");
-						alert($(".install_prompt").classList.contains("show_install_prompt"));
+                		setTimeout(() => {
+				            $(".install_prompt").style.display = "block";
+				            $(".install_prompt").classList.add("show_install_prompt");
+							alert($(".install_prompt").classList.contains("show_install_prompt"));
+						}, 1000);
 					} catch (error) {
 						reportError(error);
 					} 
