--- a/index.html
+++ b/index.html
@@ -378,9 +378,12 @@ body {
             window.addEventListener("beforeinstallprompt", (e) => {
                 e.preventDefault();
                 if(deferredEvent == "passed") {
+                	deferredEvent = e;
                 	try {
-			            $(".install_prompt").style.display = "block";
-			            $(".install_prompt").classList.add("show_install_prompt");
+                		setTimeout(() => {
+				            $(".install_prompt").style.display = "block";
+				            $(".install_prompt").classList.add("show_install_prompt");
+						}, 1);
 					} catch (error) {
 						reportError(error);
 					} 
