--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <meta name="viewport" content="width=device-width height=device-height initial-scale=1.0 maximum-scale=1.0 minimum-scale=1.0">
         <meta name="theme-color" content="#0099B1">
         <link rel="manifest" href="./manifest.webmanifest">
+        <link rel="icon" href="./recharge icon.ico" type="image/x-icon">
+        <link rel="icon" href="./recharge icon (16x16).png" type="image/png" sizes="16x16">
+        <link rel="icon" href="./recharge icon (32x32).png" type="image/png" sizes="32x32">
+        <link rel="icon" href="./recharge icon (96x96).png" type="image/png" sizes="96x96">
         <title>SMART RECHARGE</title>
         <style>
 *, *:before, *:after {
