--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@ body {
 						if(e.data && e.data.type == "version") {
 							alert(e.data.version);
 							if(e.data.version < 288) {
-								navigator.serviceWorker.register("sw.js").then(res => {
+								navigator.serviceWorker.register("sw.js" + scriptVersion).then(res => {
 		                			pageComplete();
 		               	 	}).catch(error => {
 		               		 	pageComplete();
@@ -420,7 +420,7 @@ body {
 							});
 	                	} 
 	                	else {
-	                		navigator.serviceWorker.register("sw.js").then(res => {
+	                		navigator.serviceWorker.register("sw.js" + scriptVersion).then(res => {
 	                			pageComplete();
 	               	 	}).catch(error => {
 	               		 	pageComplete();
