--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ body {
             function $$$(type) {
                 return document.createElement(type);
             } 
-            var scriptVersion = Date.now();
+            var scriptVersion = 289;
             var deferredEvent;
             var tesseractLoaded = false;
             var rechargeLoaded = false;
