--- a/index.html
+++ b/index.html
@@ -374,8 +374,8 @@ body {
                 else
                     rechargeLoaded = true;
                 
-                if(tesseractLoaded && rechargeLoaded) 
-                	LoadingDone();
+                //if(tesseractLoaded && rechargeLoaded) 
+                	//LoadingDone();
             } 
             
             window.addEventListener("beforeinstallprompt", (e) => {
