--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ body {
             function $$$(type) {
                 return document.createElement(type);
             } 
-            var scriptVersion = 2811;
+            var scriptVersion = 2812;
             var deferredEvent;
             var tesseractLoaded = false;
             var rechargeLoaded = false;
@@ -373,6 +373,7 @@ body {
                 
                 //if(tesseractLoaded && rechargeLoaded) 
                 	//LoadingDone();
+                alert(type);
             } 
             
             window.addEventListener("beforeinstallprompt", (e) => {
