--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ body {
             function scriptLoaded (type) {
                 if(type == "recharge") {
                 	try {
-                		LoadingDone();
+                		load();
                 	} catch (error) {reportError(error)}
                 } 
             } 
