--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width height=device-height initial-scale=1.0 maximum-scale=1.0 minimum-scale=1.0">
         <meta name="theme-color" content="#0099B1">
-        <link rel="manifest" href="./manifest.webmanifest?v=2817">
+        <link rel="manifest" href="./manifest.webmanifest">
         <link rel="icon" href="./src/Images/recharge icon.ico" type="image/x-icon">
         <link rel="icon" href="./src/Images/recharge icon (16x16).png" type="image/png" sizes="16x16">
         <link rel="icon" href="./src/Images/recharge icon (32x32).png" type="image/png" sizes="32x32">
@@ -126,7 +126,7 @@ body {
             <div class="head">
                 <div class="icon"></div>
                 <h2>Smart Recharge</h2>
-                <h3>Version info: V2.8.17</h3>
+                <h3>Version info: V2.8 18</h3>
                 <p>Install Smart Recharge in your phone</p>
             </div>
             <div class="foot">
@@ -139,7 +139,7 @@ body {
             <div class="load_footer">
                 <div class="load_icon"></div>
                 <h2>Smart Recharge</h2>
-                <h3>Version info: V2.8.17</h3>
+                <h3>Version info: V2.8 18</h3>
             </div>
             <div class="spinner"></div>
         </article>
@@ -173,7 +173,7 @@ body {
             <div class="head">
                 <div class="icon"></div>
                 <h2>Smart Recharge</h2>
-                <h3>Version info: V2.8.17</h3>
+                <h3>Version info: V2.8 18</h3>
             </div>
             <div class="options">
             	<button>Dark Theme<span class='toggle'></span><span class="switch"></span></button>
@@ -336,7 +336,7 @@ body {
             
             function pageComplete () {
             	if(storage) {
-            		let theme = storage.getItem("theme");
+            		let theme = storage.getItem("SR-theme");
             		if(theme && JSON.parse(theme)) {
             			$(".load").classList.toggle("dark_theme");
             		} 
