--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ body {
             function $$$(type) {
                 return document.createElement(type);
             } 
-            var version = "2.1.1.1;
+            var version = "2.1.1.1";
             var deferredEvent;
 			var storage = null;
 			try {
