--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ body {
             function $$$(type) {
                 return document.createElement(type);
             } 
-            var version = "2.1.1.1";
+            var version = "3.1.1.1";
             var deferredEvent;
 			var storage = null;
 			try {
@@ -417,8 +417,8 @@ body {
 			} 
 			
 			if("mediaDevices" in navigator && "getUserMedia" in navigator.mediaDevices) {
-                if("serviceWorker" in navigator) {
-                	window.onload = async () => {
+				window.addEventListener("load", async () => {
+	                if("serviceWorker" in navigator) {
 						const reg = await navigator.serviceWorker.register("./sw.js");
 						reg.update();
 						if(reg.waiting) {
@@ -445,11 +445,11 @@ body {
 							pageComplete();
 						} 
 					} 
-				} 
-				else {
-	            	alert("OFFLINE REGISTRATION FAILURE\n\nCan't Register an offline version of this game because your browser don't support this capability. However you can still access it only while online. If you however really need the offline version, try: \n\n1. Update your browser. or\n2. try another browser, preferably chrome.");
-	                pageComplete();
-	            } 
+					else {
+		            	alert("OFFLINE REGISTRATION FAILURE\n\nCan't Register an offline version of this game because your browser don't support this capability. However you can still access it only while online. If you however really need the offline version, try: \n\n1. Update your browser. or\n2. try another browser, preferably chrome.");
+		                pageComplete();
+		            } 
+				});
            } 
            else {
                alert("This app is not compatible with your current browser. Try another browser preferably chrome.");
