--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@ body {
 				window.addEventListener("load", async () => {
 	                if("serviceWorker" in navigator) {
 						const reg = await navigator.serviceWorker.register("./sw.js");
-						reg.update();
+						//reg.update();
 						if(reg.waiting) {
 							await InvokeSWUpdate(reg);
 						} 
