--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ body {
             function $$$(type) {
                 return document.createElement(type);
             } 
-            var version = "5.1.1.7";
+            var version = "5.1.1.8";
             var deferredEvent;
 			var storage = null;
 			try {
@@ -420,7 +420,7 @@ body {
 				if("mediaDevices" in navigator && "getUserMedia" in navigator.mediaDevices) {
 	                if("serviceWorker" in navigator) {
 						const reg = await navigator.serviceWorker.register("./sw.js");
-						//reg.update();
+						reg.update();
 						if(reg.waiting) {
 							await InvokeSWUpdate(reg);
 						} 
