--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ body {
             function $$$(type) {
                 return document.createElement(type);
             } 
-            var version = "5.1.1.14";
+            var version = "5.1.2.15";
             var deferredEvent;
 			var storage = null;
 			try {
@@ -396,7 +396,7 @@ body {
             });
             
             const InvokeSWUpdateFlow = async (reg) => {
-				let refresh = await confirm("APP UPDATE\nVersion: " + version + "\n\nNew version of Checkers available.\n\n What's New?\n\n\t- Improved internal operations.\n\t- Fixed offline loading problems.\n\nDo you want to update?");
+				let refresh = await confirm("APP UPDATE\nVersion: " + version + "\n\nNew version of Smart-Recharge available.\n\n What's New?\n\n\t- Improved internal operations.\n\t- Fixed offline loading problems.\n\nDo you want to update?");
 				if(refresh) {
 					await reg.waiting.postMessage({type: "skip-waiting"});
 				} 
