--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ body {
             function $$$(type) {
                 return document.createElement(type);
             } 
-            var version = "5.1.2.15";
+            var version = "5.1.2.17";
             var deferredEvent;
 			var storage = null;
 			try {
@@ -446,7 +446,7 @@ body {
 						} 
 					} 
 					else {
-		            	alert("OFFLINE REGISTRATION FAILURE\n\nCan't Register an offline version of this game because your browser don't support this capability. However you can still access it only while online. If you however really need the offline version, try: \n\n1. Update your browser. or\n2. try another browser, preferably chrome.");
+		            	alert("OFFLINE REGISTRATION FAILURE\n\nCan't Register an offline version of this app because your browser don't support this capability. However you can still access it only while online. If you however really need the offline version, try: \n\n1. Update your browser. or\n2. try another browser, preferably chrome.");
 		                pageComplete();
 		            }
 				} 
